Prevent infinite recursion in amount edit widget

When the text in the amount edit widget is only partially selected and a
math operation key is pressed an infinite recursion was caused which
leads to crashes. This change prevents this from happening.

BUG: 513883
FIXED-IN: 5.2.2
(cherry picked from commit 7ed05dc50cf8eea74b720caab8aca69375db6833)